Code/Services, Load Balancing, Networking/Ingress/2/Ingress_11.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    # Set up your ingress.class below (in this example, we are using nginx ingress controller)
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  # Replace the DOMAIN placeholder with the correct domain name
  - hosts:
    - DOMAIN
    secretName: letsencrypt-ca
  rules:
  # Replace the DOMAIN placeholder with the correct domain name
  - host: DOMAIN
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: ingress-test
            port:
              number: 80
