Code/Services, Load Balancing, Networking/Ingress/2/Ingress_17.yaml
apiVersion: extensions/v1beta
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: host.domain.ext
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80          
---
apiVersion: extensions/v1beta
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: host.domain.ext
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80      
      - path: /apache
        backend:
          serviceName: apache
          servicePort: 80 
      - path: /web
        backend:
          serviceName: web
          servicePort: 80
