Code/Services, Load Balancing, Networking/Ingress/2/Ingress_2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bs-ingress
  namespace: nginx-ingress
spec:
  rules:
  - host: example.com.ar
    http:
      paths:
      - pathType: Prefix
        path: “/”
        backend:
          service:
            name: nginx-service
            port:
              number: 31888
  - host: development.example.com.ar
    http:
      paths:
      - pathType: Prefix
        path: “/”
        backend:
          service:
            name: login-service
            port:
              number: 31887
