Code/Services, Load Balancing, Networking/Ingress/2/Ingress_7.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: istio  # (1)
spec:
  rules:  # (2)
  - host: dashboard.192.168.59.20.nip.io  # (3)
    http:
      paths:  # (4)
      - path: /
        pathType: Prefix  # (5)
        backend:  # (6)
          service:
            name: kubernetes-dashboard
            port:
              number: 80
